backend/src/parsing/PseudoCodeAnalyzerParser.py
# Generated from src/parsing/PseudoCodeAnalyzer.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudoCodeAnalyzerParser ( Parser ):

    grammarFileName = "PseudoCodeAnalyzer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'begin'", "'end'", 
                     "'Clase'", "'NULL'", "'for'", "'to'", "'while'", "'repeat'", 
                     "'until'", "'If'", "'then'", "'else'", "'do'", "'CALL'", 
                     "<INVALID>", "'<-'", "'+'", "'-'", "'*'", "'/'", "'mod'", 
                     "'div'", "'\\u250C'", "'\\u2510'", "'\\u2514'", "'\\u2518'", 
                     "'<'", "'>'", "<INVALID>", "<INVALID>", "'='", "<INVALID>", 
                     "'and'", "'or'", "'not'", "'T'", "'F'", "','", "'('", 
                     "')'", "'['", "']'", "'.'", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGIN", "END", "CLASS", "NULL", "FOR", "TO", "WHILE", 
                      "REPEAT", "UNTIL", "IF", "THEN", "ELSE", "DO", "CALL", 
                      "RETURN", "ASSIGN", "OP_ADD", "OP_SUB", "OP_MUL", 
                      "OP_DIV_REAL", "OP_MOD", "OP_DIV_INT", "CEIL", "CEIL_CLOSE", 
                      "FLOOR", "FLOOR_CLOSE", "OP_LT", "OP_GT", "OP_LE", 
                      "OP_GE", "OP_EQ", "OP_NE", "OP_AND", "OP_OR", "OP_NOT", 
                      "TRUE", "FALSE", "COLON", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "DOT", "RANGE", "ID", "NUMBER", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_structure_definition = 1
    RULE_class_definition = 2
    RULE_array_definition = 3
    RULE_algorithm_definition = 4
    RULE_param_list = 5
    RULE_parameter = 6
    RULE_local_var_decl = 7
    RULE_statement_list = 8
    RULE_statement = 9
    RULE_assignment = 10
    RULE_target_var = 11
    RULE_for_loop = 12
    RULE_while_loop = 13
    RULE_repeat_loop = 14
    RULE_if_statement = 15
    RULE_call_statement = 16
    RULE_return_statement = 17
    RULE_expression = 18
    RULE_atom = 19

    ruleNames =  [ "program", "structure_definition", "class_definition", 
                   "array_definition", "algorithm_definition", "param_list", 
                   "parameter", "local_var_decl", "statement_list", "statement", 
                   "assignment", "target_var", "for_loop", "while_loop", 
                   "repeat_loop", "if_statement", "call_statement", "return_statement", 
                   "expression", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BEGIN=4
    END=5
    CLASS=6
    NULL=7
    FOR=8
    TO=9
    WHILE=10
    REPEAT=11
    UNTIL=12
    IF=13
    THEN=14
    ELSE=15
    DO=16
    CALL=17
    RETURN=18
    ASSIGN=19
    OP_ADD=20
    OP_SUB=21
    OP_MUL=22
    OP_DIV_REAL=23
    OP_MOD=24
    OP_DIV_INT=25
    CEIL=26
    CEIL_CLOSE=27
    FLOOR=28
    FLOOR_CLOSE=29
    OP_LT=30
    OP_GT=31
    OP_LE=32
    OP_GE=33
    OP_EQ=34
    OP_NE=35
    OP_AND=36
    OP_OR=37
    OP_NOT=38
    TRUE=39
    FALSE=40
    COLON=41
    LPAREN=42
    RPAREN=43
    LBRACKET=44
    RBRACKET=45
    DOT=46
    RANGE=47
    ID=48
    NUMBER=49
    WS=50
    COMMENT=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def algorithm_definition(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Algorithm_definitionContext,0)


        def EOF(self):
            return self.getToken(PseudoCodeAnalyzerParser.EOF, 0)

        def structure_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Structure_definitionContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Structure_definitionContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PseudoCodeAnalyzerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 40
                    self.structure_definition() 
                self.state = 45
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 46
            self.algorithm_definition()
            self.state = 47
            self.match(PseudoCodeAnalyzerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Structure_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_definition(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Class_definitionContext,0)


        def array_definition(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Array_definitionContext,0)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_structure_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructure_definition" ):
                return visitor.visitStructure_definition(self)
            else:
                return visitor.visitChildren(self)




    def structure_definition(self):

        localctx = PseudoCodeAnalyzerParser.Structure_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structure_definition)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.class_definition()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.array_definition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PseudoCodeAnalyzerParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_class_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_definition" ):
                return visitor.visitClass_definition(self)
            else:
                return visitor.visitChildren(self)




    def class_definition(self):

        localctx = PseudoCodeAnalyzerParser.Class_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PseudoCodeAnalyzerParser.CLASS)
            self.state = 54
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 55
            self.match(PseudoCodeAnalyzerParser.T__0)
            self.state = 56
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 57
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(PseudoCodeAnalyzerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudoCodeAnalyzerParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(PseudoCodeAnalyzerParser.LBRACKET, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,0)


        def RBRACKET(self):
            return self.getToken(PseudoCodeAnalyzerParser.RBRACKET, 0)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_array_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_definition" ):
                return visitor.visitArray_definition(self)
            else:
                return visitor.visitChildren(self)




    def array_definition(self):

        localctx = PseudoCodeAnalyzerParser.Array_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 66
            self.match(PseudoCodeAnalyzerParser.LBRACKET)
            self.state = 67
            self.expression(0)
            self.state = 68
            self.match(PseudoCodeAnalyzerParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Algorithm_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudoCodeAnalyzerParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PseudoCodeAnalyzerParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PseudoCodeAnalyzerParser.RPAREN, 0)

        def BEGIN(self):
            return self.getToken(PseudoCodeAnalyzerParser.BEGIN, 0)

        def statement_list(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Statement_listContext,0)


        def END(self):
            return self.getToken(PseudoCodeAnalyzerParser.END, 0)

        def param_list(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Param_listContext,0)


        def local_var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Local_var_declContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Local_var_declContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_algorithm_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlgorithm_definition" ):
                return visitor.visitAlgorithm_definition(self)
            else:
                return visitor.visitChildren(self)




    def algorithm_definition(self):

        localctx = PseudoCodeAnalyzerParser.Algorithm_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_algorithm_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 71
            self.match(PseudoCodeAnalyzerParser.LPAREN)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==48:
                self.state = 72
                self.param_list()


            self.state = 75
            self.match(PseudoCodeAnalyzerParser.RPAREN)
            self.state = 76
            self.match(PseudoCodeAnalyzerParser.BEGIN)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.local_var_decl()
                    self.state = 78
                    self.match(PseudoCodeAnalyzerParser.T__2) 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 85
            self.statement_list()
            self.state = 86
            self.match(PseudoCodeAnalyzerParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.ParameterContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ParameterContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.COLON)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.COLON, i)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = PseudoCodeAnalyzerParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.parameter()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 89
                self.match(PseudoCodeAnalyzerParser.COLON)
                self.state = 90
                self.parameter()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_parameter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParamArrayContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudoCodeAnalyzerParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PseudoCodeAnalyzerParser.ID, 0)
        def LBRACKET(self):
            return self.getToken(PseudoCodeAnalyzerParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(PseudoCodeAnalyzerParser.RBRACKET, 0)
        def RANGE(self):
            return self.getToken(PseudoCodeAnalyzerParser.RANGE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamArray" ):
                return visitor.visitParamArray(self)
            else:
                return visitor.visitChildren(self)


    class ParamSimpleContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudoCodeAnalyzerParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PseudoCodeAnalyzerParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamSimple" ):
                return visitor.visitParamSimple(self)
            else:
                return visitor.visitChildren(self)


    class ParamObjectContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudoCodeAnalyzerParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLASS(self):
            return self.getToken(PseudoCodeAnalyzerParser.CLASS, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamObject" ):
                return visitor.visitParamObject(self)
            else:
                return visitor.visitChildren(self)



    def parameter(self):

        localctx = PseudoCodeAnalyzerParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = PseudoCodeAnalyzerParser.ParamObjectContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(PseudoCodeAnalyzerParser.CLASS)
                self.state = 97
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 98
                self.match(PseudoCodeAnalyzerParser.ID)
                pass

            elif la_ == 2:
                localctx = PseudoCodeAnalyzerParser.ParamArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 100
                self.match(PseudoCodeAnalyzerParser.LBRACKET)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==47:
                    self.state = 101
                    self.match(PseudoCodeAnalyzerParser.RANGE)


                self.state = 104
                self.match(PseudoCodeAnalyzerParser.RBRACKET)
                pass

            elif la_ == 3:
                localctx = PseudoCodeAnalyzerParser.ParamSimpleContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(PseudoCodeAnalyzerParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Local_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.COLON)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.COLON, i)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_local_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_var_decl" ):
                return visitor.visitLocal_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def local_var_decl(self):

        localctx = PseudoCodeAnalyzerParser.Local_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_local_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 109
                self.match(PseudoCodeAnalyzerParser.COLON)
                self.state = 110
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.StatementContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_statement_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = PseudoCodeAnalyzerParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474977115392) != 0):
                self.state = 116
                self.statement()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 117
                    self.match(PseudoCodeAnalyzerParser.T__2)


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.AssignmentContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.While_loopContext,0)


        def repeat_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Repeat_loopContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.If_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Call_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Return_statementContext,0)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PseudoCodeAnalyzerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.assignment()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.for_loop()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.while_loop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.repeat_loop()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.if_statement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.call_statement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.return_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def target_var(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Target_varContext,0)


        def ASSIGN(self):
            return self.getToken(PseudoCodeAnalyzerParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PseudoCodeAnalyzerParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.target_var()
            self.state = 135
            self.match(PseudoCodeAnalyzerParser.ASSIGN)
            self.state = 136
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Target_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_target_var

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarArrayContext(Target_varContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudoCodeAnalyzerParser.Target_varContext
            super().__init__(parser)
            self.copyFrom(ctx)
